examples/k8stest/conf/HTTPRoute/Basic/Service_test-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-http
  namespace: edgion-test
spec:
  selector:
    app: edgion-test-server
  ports:
    - name: http-30001
      port: 30001
      protocol: TCP
      targetPort: 30001
  type: ClusterIP
