examples/k8stest/conf/HTTPRoute/Basic/Service_test-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-websocket
  namespace: edgion-test
spec:
  selector:
    app: edgion-test-server
  ports:
    - name: ws-30005
      port: 30005
      protocol: TCP
      targetPort: 30005
  type: ClusterIP
