examples/k8stest/conf/HTTPRoute/Basic/Gateway.yaml
# HTTP  Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-test-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31000
